artifacts/skydipper/nginx-deploy-prod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Always
        resources:
          requests:
            memory: "0"
            cpu: "100m"
          limits:
            memory: "256Mi"
        ports:
          - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-conf
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-default-conf
          subPath: nginx.conf
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /health_check
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: nginx-default-conf
          configMap:
            name: nginx-default-conf
            items:
              - key: nginx.conf
                path: nginx.conf
