artifacts/skydipper/ct-production.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   name: control-tower
 name: control-tower
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9000
  selector:
    name: control-tower

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: control-tower
  name: control-tower
spec:
  template:
    metadata:
      labels:
        name: control-tower
    spec:
      containers:
      - name: control-tower
        image: vizzuality/control-tower:1.0.79
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "1Gi"
        args:
          - startDev
        ports:
          - containerPort: 9000
      restartPolicy: Always
